fixed overflow in Equipo carousel

--- a/src/styles/sobre-nosotros/equipo.scss
+++ b/src/styles/sobre-nosotros/equipo.scss
@@ -10,7 +10,7 @@
     width: 75vw;
     @include row(flex-start, center);
     gap:auto;
-    overflow-x:scroll;
+    overflow-x:hidden;
     margin-bottom:5rem;
     scroll-snap-type: x mandatory;
     .integrante{
